# smart-factory-analytics

./: .env.example  .gitignore  Dockerfile.dbt  README.md  compose.yml
config/: airflow.cfg  redpanda-connect.yaml
dags/: dbt_gold_refresh.py  elering_ingest.py
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/models/gold/: gold_downtime.sql  gold_energy.sql  gold_energy_per_part.sql  gold_oee.sql  gold_oee_availability.sql  gold_oee_performance.sql  gold_oee_quality.sql  schema.yml
dbt_project/models/silver/: schema.yml  silver_electricity_prices.sql  silver_factory_telemetry.sql  sources.yml
dbt_project/seeds/: ideal_cycle_rates.csv
dbt_project/tests/: assert_energy_grid_le_gross.sql  assert_oee_komponendid_0_1.sql
docs/: arhitektuur.md  joonis.md  progress.md
init/: 01_create_schemas.sql
metalfab-simulator/: Dockerfile  pyproject.toml
metalfab-simulator/config/: config.yaml
metalfab-simulator/src/metalfab_uns_sim/: __init__.py  cli.py  complexity.py  config.py  digital_passport.py  facilities.py  generators.py  mqtt_client.py  multi_site.py  simulator.py
notebooks/: metalfab-straming.ipynb  metalfab-streaming.ipynb
